[gd_scene load_steps=3 format=3 uid="uid://c4x7pedj551vr"]

[ext_resource type="Script" path="res://src/entities/cat_head.gd" id="1_efdfu"]
[ext_resource type="Texture2D" uid="uid://4qe81t2bevmo" path="res://assets/game_assets/Personagens/cat_head.png" id="2_sdui5"]

[node name="CatHead" type="Node2D"]
script = ExtResource("1_efdfu")
_fov_range = 350
_fov_angle = 20

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(16, 0)
rotation = 3.14159
texture = ExtResource("2_sdui5")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="FOVPolygonShape" type="CollisionPolygon2D" parent="Area2D"]
unique_name_in_owner = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
